--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jsmanga",
   "version": "0.0.1",
   "description": "grabbing a manga",
-  "main": "spider.js",
+  "main": "index.js",
   "repository": "",
   "author": "",
   "dependencies": {
