--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "",
   "dependencies": {
     "cheerio": "latest",
-    "request": "latest"
+    "request": "latest",
+    "yargs": "latest"
   }
 }
